[package]
name = "grpcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpcall"
path = "src/main.rs"

[[bin]]
name = "test-server"
path = "src/test_server.rs"

[dependencies]
clap = "3.1.6"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"
